[gd_scene load_steps=5 format=3 uid="uid://bvp4ekoy3r5kw"]

[ext_resource type="Script" path="res://Scenes/menu_GUI/template_scenes_gui/SaveOneSCRIPT.gd" id="1_r5ucf"]
[ext_resource type="Texture2D" uid="uid://b55seouy4adni" path="res://Assets/icons/pen [#1320].png" id="2_38brq"]
[ext_resource type="Texture2D" uid="uid://crcw51gy5aoob" path="res://Assets/icons/save_item [#1409].png" id="3_dr5en"]
[ext_resource type="Texture2D" uid="uid://c4notvsocqyn8" path="res://Assets/icons/delete [#1487].png" id="4_p8jr5"]

[node name="SaveOne" type="Control" groups=["select_ui_menu_return"]]
layout_mode = 3
anchors_preset = 0
offset_left = 15.0
offset_top = 183.0
offset_right = 315.0
offset_bottom = 483.0
script = ExtResource("1_r5ucf")

[node name="menu_select_position" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 406.0
offset_top = -12.0
offset_right = 446.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2

[node name="description_button" type="Label" parent="."]
visible = false
z_index = 4
z_as_relative = false
layout_mode = 0
offset_left = 251.0
offset_top = 40.0
offset_right = 343.0
offset_bottom = 57.0
theme_override_font_sizes/font_size = 10
text = "description_button"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="description_button"]
z_index = 3
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.788235)

[node name="panel_name_slot" type="ColorRect" parent="."]
layout_mode = 0
offset_top = -30.0
offset_right = 300.0
color = Color(0, 0, 0, 1)

[node name="name_slot" type="Label" parent="panel_name_slot"]
layout_mode = 0
offset_right = 300.0
offset_bottom = 30.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="panel_background" type="ColorRect" parent="."]
show_behind_parent = true
y_sort_enabled = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.211765, 0.211765, 0.211765, 0.717647)

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = -130.0
grow_horizontal = 2
grow_vertical = 2
columns = 3

[node name="write_button" type="TextureButton" parent="GridContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("2_38brq")

[node name="load_button" type="TextureButton" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 3
mouse_default_cursor_shape = 2
texture_normal = ExtResource("3_dr5en")

[node name="delete_button" type="TextureButton" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 10
mouse_default_cursor_shape = 2
texture_normal = ExtResource("4_p8jr5")

[connection signal="mouse_entered" from="GridContainer/write_button" to="." method="_on_write_button_mouse_entered"]
[connection signal="mouse_exited" from="GridContainer/write_button" to="." method="_on_write_button_mouse_exited"]
[connection signal="mouse_entered" from="GridContainer/load_button" to="." method="_on_load_button_mouse_entered"]
[connection signal="mouse_exited" from="GridContainer/load_button" to="." method="_on_load_button_mouse_exited"]
[connection signal="mouse_entered" from="GridContainer/delete_button" to="." method="_on_delete_button_mouse_entered"]
[connection signal="mouse_exited" from="GridContainer/delete_button" to="." method="_on_delete_button_mouse_exited"]
